--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Основные HTML теги</a></li>
-                    <li><a href="#">Тэги полей и элементов управления форм</a></li>
+                    <li><a href="#form">Тэги полей и элементов управления форм</a></li>
                     <li><a href="#">Тэги для верстки таблиц</a></li>
                     <li>Пункт 4</li>
                 </ul>
@@ -69,6 +69,36 @@
             <map name="hameleon">
                 <area shape="rect" coords="5, 5, 240, 240" href="https://ru.wikipedia.org/wiki/Хамелеоны" target="_blank" title="Посмотреть в Википедии">
             </map>
+            <h2 id="form">Тэги полей и элементов управления форм</h2>
+            <form method="post">
+                <input type="text" size="50" maxlength="10" placeholder="Длина текста не более 10 символов"><br>
+                <input type="submit" value="Далее"><br><br>
+                <input type="reset">
+                <input type="button" value="Просто кнопка"><br>
+                <button>
+                    <img src="img/001.jfif" alt="" width="75">
+                </button>
+                <br><br>
+                <textarea cols="100" rows="20" placeholder="Многострочный текст"></textarea>
+                <br><br>
+                <select>
+                    <option selected>Выберите цвет</option>
+                    <option>Red</option>
+                    <option>Yelow</option>
+                    <option>Green</option>
+                    <optgroup label="Оттенки">
+                        <option >Светлый</option>
+                        <option >Темный</option>
+                    </optgroup>
+                </select><br><br>
+                <input id="my" type="checkbox" >&nbsp;<label for="my">Подтверждаю</label><br><br>
+                <input type="radio" name="choise">&nbsp;Yes
+                <input type="radio" name="choise">&nbsp;No
+
+                0:23:49
+
+            </form>
+            <br><br><br><br><br>
         </main>
         <footer>
 
