--- a/work.html
+++ b/work.html
@@ -94,9 +94,14 @@
                 <input id="my" type="checkbox" >&nbsp;<label for="my">Подтверждаю</label><br><br>
                 <input type="radio" name="choise">&nbsp;Yes
                 <input type="radio" name="choise">&nbsp;No
-
-                0:23:49
-
+                <br><br>
+                <input type="file"><br><br>
+                <input type="password" placeholder="password"><br><br>
+                <input type="email" name="" id="" placeholder="email">
+                <br>
+                <input type="submit" value="Далее"><br><br>
+                <br><br>
+                <hr>
             </form>
             <br><br><br><br><br>
         </main>
