--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <title>Рабочая страница</title>
     </head>
@@ -12,8 +12,6 @@
                     <li><a href="#table">Тэги для верстки таблиц</a></li>
                     <li>Пункт 4</li>
                 </ul>
-    
-                
             </nav>
         </header>
         <main>
@@ -65,7 +63,7 @@
                 <li>Пункт 3</li>
             </ol>
 
-            <img src="img/001.jfif" alt="" width="250" usemap="#hameleon">
+            <img src="img/001.jfif" alt="Хамелеон" width="250" usemap="#hameleon">
             <map name="hameleon">
                 <area shape="rect" coords="5, 5, 240, 240" href="https://ru.wikipedia.org/wiki/Хамелеоны" target="_blank" title="Посмотреть в Википедии">
             </map>
@@ -76,7 +74,7 @@
                 <input type="reset">
                 <input type="button" value="Просто кнопка"><br>
                 <button>
-                    <img src="img/001.jfif" alt="" width="75">
+                    <img src="img/001.jfif" alt="Хамелеон" width="75">
                 </button>
                 <br><br>
                 <textarea cols="100" rows="20" placeholder="Многострочный текст"></textarea>
