--- a/02_CSS_base/index.html
+++ b/02_CSS_base/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-    
+    <head>
+        <title>Новостное агентство</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div id="black-bar">
+            <div class="fixed-container">
+                Самые <a href="#">свежие новости</a>  в реальном времени
+                <div id="datetime">14:10 07.07.24</div>
+            </div>
+        </div>
+        <div id="header">
+            <div class="fixed-container">
+                <img id="logo" src="img/logo.png" alt="logotype">
+            </div>
+        </div>
+    </body>
 </html>
