--- a/02_CSS_base/index.html
+++ b/02_CSS_base/index.html
@@ -16,5 +16,29 @@
                 <img id="logo" src="img/logo.png" alt="logotype">
             </div>
         </div>
+        <div id="menu-container">
+            <div class="fixed-container">
+                Здесь будет меню
+            </div>
+        </div>
+        <div id="central-container">
+            <div class="fixed-container">
+                <div id="column-left">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis ipsam alias enim inventore tenetur pariatur recusandae sed cupiditate consectetur odio, nemo veritatis minus minima quasi quisquam tempore incidunt at vel!
+                </div>
+                <div id="column-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga illum repudiandae magnam, ex, adipisci nihil vitae totam id atque minima enim numquam alias quis maxime quia laborum, perferendis officia error.
+                </div>
+                <div id="column-right">
+                    <img src="img/banner-1.png" alt="banner-1">
+                    <img src="img/banner-2.png" alt="banner-2">
+                </div>
+                <div class="fixed-container">
+                    <div id="special-news">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero itaque quod, iste nam modi vitae architecto tenetur corporis, beatae dolore aliquid cum ea laboriosam asperiores esse? Quam tenetur error ullam.
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
