--- a/02_CSS_base/index.html
+++ b/02_CSS_base/index.html
@@ -24,7 +24,17 @@
         <div id="central-container">
             <div class="fixed-container">
                 <div id="column-left">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis ipsam alias enim inventore tenetur pariatur recusandae sed cupiditate consectetur odio, nemo veritatis minus minima quasi quisquam tempore incidunt at vel!
+                    <h2>Новости дня</h2>
+                    <div class="news-item">
+                        <div class="news-item-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit laboriosam quos esse nihil nemo eaque voluptatibus odio in omnis dolorum officia culpa incidunt unde doloribus repellendus laborum, maxime accusamus repellat?
+                        </div>
+                        <div class="news-item-props">
+                            <a href="#">/ссылка</a>
+                            <div class="news-time">10:45</div>
+                            <div class="news-comments-count">25</div>
+                        </div>
+                    </div>
                 </div>
                 <div id="column-center">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga illum repudiandae magnam, ex, adipisci nihil vitae totam id atque minima enim numquam alias quis maxime quia laborum, perferendis officia error.
