--- a/03_JS_base/js_001.html
+++ b/03_JS_base/js_001.html
@@ -11,5 +11,7 @@
         <div id="container">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, aut blanditiis aliquid quod impedit assumenda rerum sit odit exercitationem distinctio ratione animi expedita voluptates temporibus perspiciatis porro id sequi veniam.
         </div>
+        <button id="change_color">Изменить цвет</button>
+        <textarea name="" id=""></textarea>
     </body>
 </html>
