--- a/03_JS_base/DOM/index.html
+++ b/03_JS_base/DOM/index.html
@@ -7,6 +7,9 @@
         <script src="script.js"></script>
     </head>
     <body>
+        <div id="popup-container">
+            <div id="popup"></div>
+        </div>
         <div id="black-bar">
             <div class="fixed-container">
                 Самые <a href="#">свежие новости</a>  в реальном времени
@@ -68,6 +71,7 @@
                         </div>
                     </div>
                     <button id="changeButton">Change</button>
+                    <button id="popup-button">Popup</button>
                 </div>
                 <div id="column-center">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga illum repudiandae magnam, ex, adipisci nihil vitae totam id atque minima enim numquam alias quis maxime quia laborum, perferendis officia error.
