--- a/JS/005_Замыкания/index.html
+++ b/JS/005_Замыкания/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Замыкания</title>
+        <title>Объекты и конструкторы</title>
         <script src="script.js"></script>
     </head>
     <body>
-        <h1>Замыкания</h1>
+        <h1>Объекты и конструкторы</h1>
     </body>
 </html>
