--- a/MyCode/notebook/editor.html
+++ b/MyCode/notebook/editor.html
@@ -3,47 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Редактор Quill с меню "File"</title>
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <style>
-        /* Стили для меню "File" */
-        #file-menu {
-            display: inline-block;
-            position: relative;
-        }
-
-        #file-menu > button {
-            padding: 10px;
-            background-color: #f0f0f0;
-            border: none;
-            cursor: pointer;
-        }
-
-        #file-dropdown {
-            display: none;
-            position: absolute;
-            background-color: #fff;
-            border: 1px solid #ddd;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
-            z-index: 100;
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        #file-dropdown li {
-            padding: 10px;
-            cursor: pointer;
-        }
-
-        #file-dropdown li:hover {
-            background-color: #f0f0f0;
-        }
-    </style>
+    <title>Editor</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="quilljs.css" rel="stylesheet">
+    <link rel="stylesheet" href="menu.css">
+    <script src="QuillEditor.js" defer></script>
+    <script src="menuFile.js" defer></script>
 </head>
 <body>
-
-    <h2>WYSIWYG редактор с Quill</h2>
 
     <!-- Меню "File" -->
     <div id="file-menu">
@@ -52,6 +19,8 @@
             <li onclick="saveQuillContent('html')">Сохранить как HTML</li>
             <li onclick="saveQuillContent('text')">Сохранить как TXT</li>
             <li onclick="saveQuillContent('json')">Сохранить как JSON</li>
+            <li onclick="chooseDirectory()">Выбрать папку для сохранения</li>
+            <li onclick="document.getElementById('file-input').click()">Открыть файл</li>
         </ul>
     </div>
 
@@ -60,6 +29,7 @@
         <select class="ql-header">
             <option value="1">Заголовок 1</option>
             <option value="2">Заголовок 2</option>
+            <option value="3">Заголовок 3</option>
             <option selected>Обычный</option>
         </select>
         <button class="ql-bold"></button>
@@ -92,73 +62,11 @@
     <!-- Контейнер для редактора -->
     <div id="editor-container"></div>
 
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script>
-        // Расширение формата с добавлением line-height
-        var Parchment = Quill.import('parchment');
-        var lineHeightStyle = new Parchment.Attributor.Style('line-height', 'line-height', {
-            scope: Parchment.Scope.BLOCK,
-            whitelist: ['1.0', '1.5', '2.0']
-        });
-        Quill.register(lineHeightStyle, true);
-
-        const quill = new Quill('#editor-container', {
-            theme: 'snow',
-            modules: {
-                toolbar: {
-                    container: '#toolbar',
-                    handlers: {
-                        'line-height': function(value) {
-                            this.quill.format('line-height', value);
-                        }
-                    }
-                }
-            }
-        });
-
-        // Функция для сохранения контента в различных форматах
-        function saveQuillContent(format) {
-            let content, blob, fileName;
-
-            switch (format) {
-                case 'html':
-                    content = quill.root.innerHTML;
-                    blob = new Blob([content], { type: 'text/html' });
-                    fileName = 'content.html';
-                    break;
-                case 'text':
-                    content = quill.getText();
-                    blob = new Blob([content], { type: 'text/plain' });
-                    fileName = 'content.txt';
-                    break;
-                case 'json':
-                    content = JSON.stringify(quill.getContents());
-                    blob = new Blob([content], { type: 'application/json' });
-                    fileName = 'content.json';
-                    break;
-            }
-
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = fileName;
-            a.click();
-            URL.revokeObjectURL(url);
-        }
-
-        // Показать/скрыть выпадающее меню
-        document.querySelector('#file-menu > button').addEventListener('click', function() {
-            const dropdown = document.getElementById('file-dropdown');
-            dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
-        });
-
-        // Скрыть меню, если щелкнуть вне его
-        window.addEventListener('click', function(e) {
-            if (!document.getElementById('file-menu').contains(e.target)) {
-                document.getElementById('file-dropdown').style.display = 'none';
-            }
-        });
-    </script>
+    <!-- Input для выбора директории -->
+    <input type="file" id="directory-input" webkitdirectory>
+    
+    <!-- Input для открытия файла -->
+    <input type="file" id="file-input" accept=".html,.txt,.json">
 
 </body>
 </html>
