--- a/MyCode/notebook/sideMenu/index.html
+++ b/MyCode/notebook/sideMenu/index.html
@@ -6,7 +6,7 @@
     <title>Кастомизированное боковое меню</title>
     <!-- Подключаем локальные файлы Quill -->
     <link rel="stylesheet" href="quill/quill.snow.css">
-    <script src="quill/quill.min.js" defer></script>
+    <script src="quill/quill.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 
